tests/ui/issues/issue-14915.rs
fn main() {
    let x: Box<isize> = Box::new(0);

    println!("{}", x + 1);
    //~^ ERROR cannot add `{integer}` to `Box<isize>`
}
